Fix not to stretch images in small window views
because of responsive layout

--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,9 @@ display:inline;
 .live_cam {
 	border:0;
 }
+
+.thumbnail > a > img {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+}
